# merkle

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  dusk_ci.yml
benches/: blake3.rs  poseidon.rs  zk.rs
dusk-merkle/: CHANGELOG.md  Cargo.toml  Makefile  README.md
dusk-merkle/benches/: blake3.rs
dusk-merkle/examples/: annotation.rs  blake3.rs
dusk-merkle/src/: lib.rs  node.rs  opening.rs  tree.rs  walk.rs
dusk-merkle/tests/: serializable_opening.rs
examples/: annotation.rs  blake_zero.rs  poseidon_zero.rs
poseidon-merkle/: CHANGELOG.md  Cargo.toml  Makefile  README.md
poseidon-merkle/benches/: poseidon.rs  zk.rs
poseidon-merkle/examples/: zk.rs
poseidon-merkle/src/: lib.rs  zk.rs
poseidon-merkle/tests/: zk.rs
src/: aggregate.rs  blake3.rs  lib.rs  node.rs  opening.rs  poseidon.rs  position.rs  tree.rs  utils.rs  walk.rs
src/poseidon/: zero_items.rs  zk.rs
tests/: serializable_opening.rs
