[package]
name = "dusk-merkle"
description = "Crate implementing Dusk Network's Merkle tree"
version = "0.1.0"

categories = ["data-structures", "no-std"]
keywords = ["tree", "merkle", "hash", "data", "structure"]
repository = "https://github.com/dusk-network/dusk-merkle"

edition = "2021"
license = "MPL-2.0"

[dependencies]
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.7", optional = true, default-features = false }

[features]
size_16 = ["rkyv/size_16"]
size_32 = ["rkyv/size_32"]
size_64 = ["rkyv/size_64"]
rkyv-impl = [
    "rkyv/alloc",
    "rkyv",
    "bytecheck"
]
